cliinstaller (0.2.4-1) unstable; urgency=low

  * Initial release

 -- Nikolas Poniros <edhunter@sidux.com>  Mon, 23 Nov 2009 08:58:00 +0100